test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:6: error: halt reached - ***Error: Not of bool type***
